tailwindcss logic created

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'" />
   <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'" />
+  <link href='./dist/output.css' rel='stylesheet'>
   <title>ShopTrack</title>
 </head>
 
 <body>
-  <h1>Hola mundo</h1>
+  <h1 class="text-orange-400">Hola mundo</h1>
 </body>
 
 </html>
