quit: dashboard submenu

--- a/index.html
+++ b/index.html
@@ -14,14 +14,8 @@
 <body>
   <header class="flex items-center bg-gray-800 h-12 px-4 shadow-md">
     <nav class="flex gap-4 ">
-      <div class="menu-item text-white">Dashboard
-        <ul class="submenu">
-          <li data-view="dashboard.html">Resumen general</li>
-          <li id="VentaDia">Ventas del día</li>
-          <li id="StockProdu">Productos con stock bajo</li>
-          <hr>
-          <li id="Ingresos">Total de ingresos del mes</li>
-        </ul>
+      <div data-view="dashboard.html" class="menu-item text-white cursor-pointer">
+        Dashboard
       </div>
       <div class="menu-item text-white">Venta
         <ul class="submenu">
