--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 
   <!-- Scripts -->
   <script src="./renderer.js"></script>
+  <script src="./assets/js/productos.js"></script>
 </body>
 
 </html>
