fortawesome styles linked

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'" />
   <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'" />
   <link href='./dist/output.css' rel='stylesheet'>
+  <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+
   <title>ShopTrack</title>
 </head>
 
@@ -96,7 +98,6 @@
 
   <!-- Scripts -->
   <script src="./renderer.js"></script>
-  <script src="./assets/js/productos.js"></script>
 </body>
 
 </html>
