--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <title>ShopTrack</title>
 </head>
 
-<body>
-  <header class="flex items-center bg-gray-800 h-12 px-4 shadow-md">
+<body class="bg-radial-[at_50%_75%] from-sky-400 via-blue-200 to-indigo-500 to-90%">
+  <header class="flex items-center h-12 bg-linear-to-r from-blue-950 to-indigo-950 px-4 shadow-md">
     <nav class="flex gap-4 ">
       <div data-view="dashboard.html" class="menu-item text-white cursor-pointer">
         Dashboard
