--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'" />
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';" />
   <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'" />
   <link href='./dist/output.css' rel='stylesheet'>
   <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
@@ -97,7 +98,9 @@
   </div>
 
   <!-- Scripts -->
-  <script src="./renderer.js"></script>
+  <script type="module" src="./renderer.js"></script>
+  <script src="./node_modules/echarts/dist/echarts.min.js"></script>
+
 </body>
 
 </html>
