header styles changed

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 </head>
 
 <body class="bg-radial-[at_50%_75%] from-sky-400 via-blue-200 to-indigo-500 to-90%">
-  <header class="flex items-center h-12 bg-linear-to-r from-blue-950 to-indigo-950 px-4 shadow-md">
-    <nav class="flex gap-4 ">
+  <header
+    class="flex items-center h-12 bg-linear-to-r from-indigo-950 to-cyan-900 shadow-2xl shadow-gray-600 p-5 pb-7 pt-7 mb-8">
+    <nav class="flex gap-4">
       <div data-view="dashboard.html" class="menu-item text-white cursor-pointer">
         Dashboard
       </div>
@@ -26,7 +27,7 @@
           <li data-view="historial_ventas.html">Historial</li>
           <hr>
           <li id="Facturas">Facturas</li>
-          <li id="Clientes">Clientes</li>
+          <li data-view="clientes.html">Clientes</li>
         </ul>
       </div>
       <div class="menu-item text-white">Producto
