products list view added to submenu

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <ul class="submenu">
           <li id="Agregar">Nuevo producto</li>
           <li id="Actualizar">Actualizar</li>
-          <li id="Listar">Lista de productos</li>
+          <li data-view="listar_productos.html">Lista de productos</li>
           <hr>
           <li id="Categorias">Categorías</li>
         </ul>
