new view added to submenu

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div class="menu-item text-white">Producto
         <ul class="submenu">
-          <li id="Agregar">Nuevo producto</li>
+          <li data-view="crear_producto.html">Nuevo producto</li>
           <li data-view="actualizar_producto.html">Actualizar</li>
           <li data-view="listar_productos.html">Lista de productos</li>
           <hr>
