configuracion view added

--- a/index.html
+++ b/index.html
@@ -33,20 +33,19 @@
         <ul class="submenu">
           <li data-view="crear_producto.html">Nuevo producto</li>
           <li data-view="actualizar_producto.html">Actualizar</li>
-          <li data-view="listar_productos.html">Lista de productos</li>
           <hr>
-          <li id="Categorias">Categorías</li>
+          <li data-view="listar_productos.html">Lista de productos</li>
         </ul>
       </div>
-      <div class="menu-item text-white">Reportes
+      <!--  <div class="menu-item text-white">Reportes
         <ul class="submenu">
           <li id="RepoVenta">Venta por dd/mm/aa</li>
           <li id="GraficoIng">Gráfico de ingresos</li>
           <hr>
           <li id="RepoProdu">Articulos más vendidos</li>
         </ul>
-      </div>
-      <div class="menu-item text-white">Configuración</div>
+      </div> -->
+      <div data-view="configuracion.html" class="menu-item text-white cursor-pointer">Configuración</div>
       <div class="menu-item text-white">Ayuda</div>
     </nav>
   </header>
