critic products view added

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           <li data-view="actualizar_producto.html" data-i18n="nav.updateProduct">Actualizar</li>
           <hr>
           <li data-view="listar_productos.html" data-i18n="nav.listProducts">Lista de productos</li>
+          <li data-view="productos_criticos.html" data-i18n="nav.criticalProducts">Productos críticos</li>
           <li data-view="marcas.html" data-i18n="nav.brands">Marcas</li>
         </ul>
       </div>
