--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="bg-radial-[at_50%_75%] from-sky-400 via-blue-200 to-indigo-500 to-90%">
   <header
     class="flex items-center h-12 bg-linear-to-r from-indigo-950 to-cyan-900 shadow-2xl shadow-gray-600 p-5 pb-7 pt-7 mb-8 z-50">
-    <nav class="flex gap-4">
+    <nav class="flex gap-4 flex-1">
       <div data-view="dashboard.html" class="menu-item text-white cursor-pointer" data-i18n="nav.dashboard">
         Dashboard
       </div>
@@ -54,6 +54,7 @@
         Configuración</div>
       <div class="menu-item text-white" data-i18n="nav.help">Ayuda</div>
     </nav>
+    <div id="app-version" class="ml-auto flex items-center gap-2 text-md font-extrabold font-mono"></div>
   </header>
 
   <!-- Contenedor donde se carga el contenido -->
