help view created

--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
       </div> -->
       <div data-view="configuracion.html" class="menu-item text-white cursor-pointer" data-i18n="nav.settings">
         Configuración</div>
-      <div class="menu-item text-white" data-i18n="nav.help">Ayuda</div>
+      <div data-view="ayuda.html" class="menu-item text-white cursor-pointer" data-i18n="nav.help">Ayuda</div>
     </nav>
     <div id="app-version" class="ml-auto flex items-center gap-2 text-md font-extrabold font-mono"></div>
   </header>
 
   <!-- Contenedor donde se carga el contenido -->
+  <main id="mainContent"></main>
   <main id="mainContent" class="p-4"></main>
 
   <!-- Scripts -->
